--- a/index.html
+++ b/index.html
@@ -141,14 +141,14 @@
 					</a>
 				</div>
 				<div class="col-md-4">
-					<a href="bsftgov.html">
+					<a href="s4w.html">
 						<div class="work-thumb">
 							<div class="work-title">
-				        	<h2>BSFT GOV<br>
-				        	<span class="work-category">Web Design</span>
+				        	<h2>S4W<br>
+				        	<span class="work-category">Web Design/Product Design/Branding</span>
 				        	</h2>
 				        </div>
-				        	<img src="assets/images/bsgov_thumb.png">
+				        	<img src="assets/images/s4w_thumb.png">
 				        </div>
 				    </a>
 				</div>
@@ -184,14 +184,14 @@
 				    </a>
 				</div>
 				<div class="col-md-4">
-					<a href="totaltec.html">
+					<a href="bsftgov.html">
 						<div class="work-thumb">
-						<div class="work-title">
-				        	<h2>Total-Tec<br>
+							<div class="work-title">
+				        	<h2>BSFT GOV<br>
 				        	<span class="work-category">Web Design</span>
 				        	</h2>
 				        </div>
-				        	<img src="assets/images/total-tec_thumb.png"">
+				        	<img src="assets/images/bsgov_thumb.png">
 				        </div>
 				    </a>
 				</div>
