--- a/s4w.html
+++ b/s4w.html
@@ -57,8 +57,8 @@
 					<section id="work-header" class="hero-sec">
 				        <div>
 				          <h2 class="home-title uppercase" id="gradient">WORKS</h2>
-				          <h1 class="uppercase">SuperBowl LII Champions Philadelphia Eagles</h1>
-				          <h5 class="work-desc">Web design dedicated to SuperBowl LII Champions Philadelphia Eagles. <br/>Reflecting back on their SuperBowl game, season and franchise history.</h5>
+				          <h1 class="uppercase">S4W (Sports 4 Win) Web Design and Branding</h1>
+				          <h5 class="work-desc">I wanted to create a sports news website where everyone can have their opinions heard. When I read the comments on other sports sites, everyone seems to be an expert so lets hear them. In S4W, users can vote for the MVP of each game and Wasted Effort (best performer on losing team). Each players get points and users can see which players get the most votes through out the season. Also on news articles, users can vote on who won the deal, trades, and so on.</h5>
 				        	<!-- <img class="main-hero" src="assets/images/andy-hero_2017.png">
 				        	<img class="name_tag" src="assets/images/name_tag2.png"> -->
 				        </div>
@@ -74,11 +74,11 @@
 				</div>
 				<div class="col-md-4">
 					<h3>Project Date</h3>
-					<h4>February 2018</h4>
+					<h4>March 2018</h4>
 				</div>
 				<div class="col-md-4">
 					<h3>Category</h3>
-					<h4>Web Design, Graphic Design</h4>
+					<h4>Web Design, Branding</h4>
 				</div>
 			</div>
 		</div>
@@ -90,10 +90,15 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-12 work-stats">
-				<img src="assets/images/eagles_page_display.png">
+				<img src="assets/images/s4w_home.jpg">
 			</div>
 			<div class="col-sm-12 work-stats">
-				<img src="assets/images/eagles_champs_mockup.jpg">
+				<h4 style="padding: 40px 0px 20px 0px;">Vote the MVP from the winning team, and Wasted Effort from the losing team. MVP gets 5 points, and Wasted Effort gets 3 points. <br/>Check out the points leaders from each team on the left panel.</h4>
+				<img src="assets/images/s4w_gamecast.jpg">
+			</div>
+			<div class="col-sm-12 work-stats">
+				<h4 style="padding: 40px 0px 20px 0px;">Which team do you think won this deal? Vote on it and have your opinions heard.</h4>
+				<img src="assets/images/s4w_article.jpg">
 			</div>
 		</div>
 	</div>
