--- a/about.html
+++ b/about.html
@@ -71,8 +71,8 @@
 				<h3 class="about-subtitle">About Me</h3>
 			</div>
 			<div class="col-md-8">
-				<h3 class="about-h3">UI/Visual designer from Washington DC area. I currently work for a Cisco, and has experience working with  clients both in US Federal government, Healthcare, Education and commercial brands.
-				My biggest personal interest lies in sports and music, which helps me create conceptual designs based on my favorite athletes, brands and musicians.</h3>
+				<h3 class="about-h3">UI/Visual designer based in Washington DC area. I currently work for a Cisco, and has experience working with  clients both in US Federal government, Healthcare, Education and commercial brands.
+				I create visual identities, brand style guides, digital graphics, UI/UX website design and product design. </h3>
 				<h3><a href="mailto:kimandy703@gmail.com">Email Me</a></h3>
 			</div>
 		</div>
