--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
 			<div class="row">
 
 				<div class="col-md-4">
-					<a href="eagles.html">
+					<a href="architect.html">
 						<div class="work-thumb">
 							<div class="work-title">
-					          <h2 class="uppercase">SuperBowl LII Champ<br>
+					          <h2 class="uppercase">Starfall Getaway<br>
 					          <span class="work-category">Web Design</span>
 					          </h2>
 					        </div>
-				        	<img src="assets/images/eagles_thumb.png">
+				        	<img src="assets/images/architect_thumb.png">
 				        </div>
 			        </a>
 				</div>
@@ -130,16 +130,16 @@
 				    </a>
 				</div>
 				<div class="col-md-4">
-					<a href="noothername.html">
+					<a href="eagles.html">
 						<div class="work-thumb">
-						<div class="work-title">
-				        	<h2>N.O.N<br>
-				        	<span class="work-category">Branding/Apparel Design</span>
-				        	</h2>
+							<div class="work-title">
+					          <h2 class="uppercase">SuperBowl LII Champ<br>
+					          <span class="work-category">Web Design</span>
+					          </h2>
+					        </div>
+				        	<img src="assets/images/eagles_thumb.png">
 				        </div>
-							<img src="assets/images/non_thumb.png">
-						</div>
-					</a>
+			        </a>
 				</div>
 				<div class="col-md-4">
 					<a href="s4w.html">
@@ -161,6 +161,18 @@
 			<div class="row">
 
 				<div class="col-md-4">
+					<a href="noothername.html">
+						<div class="work-thumb">
+						<div class="work-title">
+				        	<h2>N.O.N<br>
+				        	<span class="work-category">Branding/Apparel Design</span>
+				        	</h2>
+				        </div>
+							<img src="assets/images/non_thumb.png">
+						</div>
+					</a>
+				</div>
+				<div class="col-md-4">
 					<a href="adbi.html">
 						<div class="work-thumb">
 						<div class="work-title">
@@ -173,7 +185,7 @@
 				    </a>
 				</div>
 				<div class="col-md-4">
-					<a href="asbmt.html">
+					<<a href="asbmt.html">
 						<div class="work-thumb">
 						<div class="work-title">
 				        	<h2>ASBMT<br>
@@ -181,18 +193,6 @@
 				        	</h2>
 				        </div>
 				        	<img src="assets/images/asbmt_thumb.png">
-				        </div>
-				    </a>
-				</div>
-				<div class="col-md-4">
-					<a href="bsftgov.html">
-						<div class="work-thumb">
-							<div class="work-title">
-				        	<h2>BSFT GOV<br>
-				        	<span class="work-category">Web Design</span>
-				        	</h2>
-				        </div>
-				        	<img src="assets/images/bsgov_thumb.png">
 				        </div>
 				    </a>
 				</div>
