--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 				    </a>
 				</div>
 				<div class="col-md-4">
-					<<a href="asbmt.html">
+					<a href="asbmt.html">
 						<div class="work-thumb">
 						<div class="work-title">
 				        	<h2>ASBMT<br>
