--- a/architect.html
+++ b/architect.html
@@ -78,7 +78,7 @@
 				</div>
 				<div class="col-md-4">
 					<h3>Category</h3>
-					<h4>Web Design, Degital Design</h4>
+					<h4>Web Design, Digital Design</h4>
 				</div>
 			</div>
 		</div>
