sales playbook addd

--- a/index.html
+++ b/index.html
@@ -75,6 +75,19 @@
 			<div class="row">
 
 				<div class="col-md-4">
+					<a href="sales_playbook.html">
+						<div class="work-thumb">
+							<div class="work-title">
+					          <h2 class="uppercase">Cisco Sales Playbook<br>
+					          <span class="work-category">Web Design</span>
+					          </h2>
+					        </div>
+				        	<img src="assets/images/playbook_thumb.jpg">
+				        </div>
+			        </a>
+				</div>
+				
+				<div class="col-md-4">
 					<a href="architect.html">
 						<div class="work-thumb">
 							<div class="work-title">
@@ -98,6 +111,12 @@
 				        </div>
 				    </a>
 				</div>
+
+			</div>
+		</div>
+
+		<div class="container">
+			<div class="row">
 				<div class="col-md-4">
 					<a href="giannis_alpha.html">
 						<div class="work-thumb">
@@ -110,13 +129,6 @@
 				        </div>
 				    </a>
 				</div>
-
-			</div>
-		</div>
-
-		<div class="container">
-			<div class="row">
-
 				<div class="col-md-4">
 					<a href="fancrew.html">
 				        <div class="work-thumb">
@@ -141,6 +153,14 @@
 				        </div>
 			        </a>
 				</div>
+				
+
+			</div>
+		</div>
+
+		<div class="container last">
+			<div class="row">
+
 				<div class="col-md-4">
 					<a href="s4w.html">
 						<div class="work-thumb">
@@ -152,25 +172,6 @@
 				        	<img src="assets/images/s4w_thumb.png">
 				        </div>
 				    </a>
-				</div>
-
-			</div>
-		</div>
-
-		<div class="container last">
-			<div class="row">
-
-				<div class="col-md-4">
-					<a href="noothername.html">
-						<div class="work-thumb">
-						<div class="work-title">
-				        	<h2>N.O.N<br>
-				        	<span class="work-category">Branding/Apparel Design</span>
-				        	</h2>
-				        </div>
-							<img src="assets/images/non_thumb.png">
-						</div>
-					</a>
 				</div>
 				<div class="col-md-4">
 					<a href="adbi.html">
