--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 					<section id="home" class="hero-sec">
 				        <div>
 				          <h2 class="home-title uppercase" id="gradient">ANDY KIM</h2>
-				          <h1 class="uppercase">UI/Visual Designer based in Washington DC, crafting beautiful and functional websites and mobile apps</h1>
+				          <h1 class="uppercase">English, Korean and Japanese trilingual UI/Visual Designer based in Washington DC, crafting beautiful and functional websites and mobile apps</h1>
 				        	<!-- <img class="main-hero" src="assets/images/andy-hero_2017.png">
 				        	<img class="name_tag" src="assets/images/name_tag2.png"> -->
 				        </div>
