resume spell check

--- a/about.html
+++ b/about.html
@@ -124,7 +124,7 @@
 			<div class="col-md-4">
 				<h3 class="about-subtitle">About Me</h3>
 				<h3 class="about-subtitle-sm">
-				  <a href="assets/ak_resume_2018.pdf">Download Resume</a>
+				  <a href="assets/ak_resume2018_2.pdf">Download Resume</a>
 				</h3>
 			</div>
 			<div class="col-md-8">
