--- a/about.html
+++ b/about.html
@@ -129,23 +129,19 @@
 			</div>
 			<div class="col-md-8">
 				<div class="about-exp">
-					<h3 class="about-h3">Cisco - 2018</h3>
+					<h3 class="about-h3">Cisco / 2018</h3>
 					<h4>User Experience Designer</h4>
 				</div>
 				<div class="about-exp">
-					<h3 class="about-h3">BroadSoft - 2018</h3>
+					<h3 class="about-h3">Reingold / 2015-17</h3>
 					<h4>User Interface Designer</h4>
 				</div>
 				<div class="about-exp">
-					<h3 class="about-h3">Reingold - 2015-17</h3>
-					<h4>User Interface Designer</h4>
-				</div>
-				<div class="about-exp">
-					<h3 class="about-h3">Munhwa Broadcasting Corp. - 2012-14</h3>
+					<h3 class="about-h3">Munhwa Broadcasting Corp. / 2012-14</h3>
 					<h4>Associate Producer</h4>
 				</div>
 				<div class="about-exp">
-					<h3 class="about-h3">Empire Entertainment Japan - 2008-12</h3>
+					<h3 class="about-h3">Empire Entertainment Japan / 2008-12</h3>
 					<h4>Producer</h4>
 				</div>
 			</div>
