--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 					<section id="home" class="hero-sec">
 				        <div>
 				          <h2 class="home-title uppercase" id="gradient">ANDY KIM</h2>
-				          <h1 class="uppercase">English, Korean and Japanese trilingual UI/Visual Designer based in Washington DC, crafting beautiful and functional websites and mobile apps</h1>
+				          <h1>English, Korean and Japanese trilingual UI/Visual Designer, crafting beautiful and functional websites and mobile apps</h1>
 				        	<!-- <img class="main-hero" src="assets/images/andy-hero_2017.png">
 				        	<img class="name_tag" src="assets/images/name_tag2.png"> -->
 				        </div>
@@ -78,9 +78,9 @@
 					<a href="sales_playbook.html">
 						<div class="work-thumb">
 							<div class="work-title">
-					          <h2 class="uppercase">Cisco Sales Playbook<br>
+					          <h3 class="uppercase">Cisco <br/>Sales Playbook<br>
 					          <span class="work-category">Web Design</span>
-					          </h2>
+					          </h3>
 					        </div>
 				        	<img src="assets/images/playbook_thumb.jpg">
 				        </div>
@@ -91,9 +91,9 @@
 					<a href="architect.html">
 						<div class="work-thumb">
 							<div class="work-title">
-					          <h2 class="uppercase">Starfall Getaway<br>
+					          <h3 class="uppercase">Starfall Getaway<br>
 					          <span class="work-category">Web Design</span>
-					          </h2>
+					          </h3>
 					        </div>
 				        	<img src="assets/images/architect_thumb.png">
 				        </div>
@@ -103,9 +103,9 @@
 					<a href="nike_rise.html">
 						<div class="work-thumb">
 						<div class="work-title">
-				        	<h2>NIKE SF AF 1 HI RISE<br>
+				        	<h3>NIKE SF AF 1 HI RISE<br>
 				        	<span class="work-category">Branding/Web Design</span>
-				        	</h2>
+				        	</h3>
 				        </div>
 				        	<img src="assets/images/af1_thumb.png">
 				        </div>
@@ -121,9 +121,9 @@
 					<a href="giannis_alpha.html">
 						<div class="work-thumb">
 						 <div class="work-title">
-				        	<h2>GIANNIS ALPHA<br>
+				        	<h3>GIANNIS ALPHA<br>
 				        	<span class="work-category">Branding/Graphic Design</span>
-				        	</h2>
+				        	</h3>
 				        </div>
 				        	<img src="assets/images/giannis_thumb.png">
 				        </div>
@@ -133,9 +133,9 @@
 					<a href="fancrew.html">
 				        <div class="work-thumb">
 				        <div class="work-title">
-				        	<h2>FANCREW<br>
+				        	<h3>FANCREW<br>
 				        	<span class="work-category">Product Design</span>
-				        	</h2>
+				        	</h3>
 				        </div>
 				        	<img src="assets/images/fancrew_thumb.png">
 				        </div>
@@ -145,9 +145,9 @@
 					<a href="eagles.html">
 						<div class="work-thumb">
 							<div class="work-title">
-					          <h2 class="uppercase">SuperBowl LII Champ<br>
+					          <h3 class="uppercase">SuperBowl LII Champ<br>
 					          <span class="work-category">Web Design</span>
-					          </h2>
+					          </h3>
 					        </div>
 				        	<img src="assets/images/eagles_thumb.png">
 				        </div>
@@ -165,9 +165,9 @@
 					<a href="s4w.html">
 						<div class="work-thumb">
 							<div class="work-title">
-				        	<h2>S4W<br>
+				        	<h3>S4W<br>
 				        	<span class="work-category">Web Design/Product Design/Branding</span>
-				        	</h2>
+				        	</h3>
 				        </div>
 				        	<img src="assets/images/s4w_thumb.png">
 				        </div>
@@ -177,9 +177,9 @@
 					<a href="adbi.html">
 						<div class="work-thumb">
 						<div class="work-title">
-				        	<h2>ADBI<br>
+				        	<h3>ADBI<br>
 				        	<span class="work-category">Web Design</span>
-				        	</h2>
+				        	</h3>
 				        </div>
 				        	<img src="assets/images/nadbc_thumb.png">
 				        </div>
@@ -189,9 +189,9 @@
 					<a href="asbmt.html">
 						<div class="work-thumb">
 						<div class="work-title">
-				        	<h2>ASBMT<br>
+				        	<h3>ASBMT<br>
 				        	<span class="work-category">Web Design</span>
-				        	</h2>
+				        	</h3>
 				        </div>
 				        	<img src="assets/images/asbmt_thumb.png">
 				        </div>
