--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-4">
-					<a href="sales_playbook.html">
+					<a href="webex_2020.html">
 						<div class="work-thumb">
 							<div class="work-title">
 					          <h3 class="uppercase">Cisco <br/>Webex Digital<br/>
@@ -86,7 +86,7 @@
 				</div>
 				
 				<div class="col-md-4">
-					<a href="architect.html">
+					<a href="webex_product_site.html">
 						<div class="work-thumb">
 							<div class="work-title">
 					          <h3 class="uppercase">Cisc<br>Product website<br/>
@@ -98,7 +98,7 @@
 			        </a>
 				</div>
 				<div class="col-md-4">
-					<a href="nike_rise.html">
+					<a href="#">
 						<div class="work-thumb">
 						<div class="work-title">
 				        	<h3>Cisco<br>Webex Trial<br/>
@@ -115,7 +115,7 @@
 		<div class="container last">
 			<div class="row">
 				<div class="col-md-4">
-					<a href="webex_product_site.html">
+					<a href="cultivate_2020.html">
 						<div class="work-thumb">
 						 <div class="work-title">
 				        	<h3>Cultivate Charlottesville<br>
@@ -127,7 +127,7 @@
 				    </a>
 				</div>
 				<div class="col-md-4">
-					<a href="fancrew.html">
+					<a href="fancrew_2020.html">
 				        <div class="work-thumb">
 				        <div class="work-title">
 				        	<h3>FANCREW<br>
@@ -139,7 +139,7 @@
 				    </a>
 				</div>
 				<div class="col-md-4">
-					<a href="eagles.html">
+					<a href="https://dribbble.com/kimandy703">
 						<div class="work-thumb">
 							<div class="work-title">
 					          <h3 class="uppercase">Other Works<br>
