--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 			        </a>
 				</div>
 				<div class="col-md-4">
-					<a href="#">
+					<a href="webex_trial.html">
 						<div class="work-thumb">
 						<div class="work-title">
 				        	<h3>Cisco<br>Webex Trial<br/>
@@ -139,7 +139,7 @@
 				    </a>
 				</div>
 				<div class="col-md-4">
-					<a href="https://dribbble.com/kimandy703">
+					<a href="https://dribbble.com/kimandy703" target="_blank">
 						<div class="work-thumb">
 							<div class="work-title">
 					          <h3 class="uppercase">Other Works<br>
