--- a/webex_trial.html
+++ b/webex_trial.html
@@ -59,7 +59,7 @@
 				        	<div>
 				          		<h2 class="home-title uppercase" id="gradient">WORKS</h2>
 				          		<img class="cisco_logo" src="assets/images/product_site/cisco_logo.png">
-				          		<h1 class="uppercase">Cisco Digital Engagement Center<br/>Webex.com Digital</h1>
+				          		<h1 class="uppercase">Cisco Webex 30 day Trial Process</h1>
 				          		<!-- <h5 class="work-desc">Branding for Giannis Antetoukoumpo's first signature shoes with Nike. Concept of being the First Giannis, and not following anyone else. Logo uses the Greek letters "G" and "A". First Ginannis Alpha.</h5> -->
 				        	<!-- <img class="main-hero" src="assets/images/andy-hero_2017.png">
 				        	<img class="name_tag" src="assets/images/name_tag2.png"> -->
@@ -107,10 +107,7 @@
 				<h1>Partner Customization</h1>
 				<p>Branding is important. Engagement Center websites provide cutomization experience for the Partners so they can include their logo, font and their color palette</p>
 			</div>
-			<div class="col-sm-6 content-panel">
-				<h1>Simple and cleaner design</h1>
-				<p>Less is more. By focusing on one color from the palette, it makes it easier for the users to follow through the story and the cleaner overall look is more engaging to the readers. </p>
-			</div>
+			
 		</div>
 	</div>
 	<div class="container-fluid">
@@ -123,8 +120,8 @@
 	<div class="container container-tiny">
 		<div class="row">
 			<div class="col-sm-6 div-center content-panel">
-				<h1>Responsive</h1>
-				<p>Offering the most fluid and pleasant experience for the both mobile and tablet versions.</p>
+				<h1>User Flow</h1>
+				<p>Within 3 simple steps, the user can add their admin email account, up to 4 additional team members, order devices for the trial, and check out.</p>
 			</div>
 		</div>
 	</div>
