--- a/cultivate_2020.html
+++ b/cultivate_2020.html
@@ -72,17 +72,17 @@
 			<div class="row">
 				<div class="col-md-6">
 					<h3>Brief</h3>
-					<p class="txt-box-pad-bot-20">Cultivate Charlottesville is a not for profit organization that focuses on building opportunities and unity between youth and the community through cultivating farms. The mission is to create food equity in young people and help them thrive with opportunities to engage in urbanfarming, discover through experience, build equity, lead, and cultivate healthy living skills. </p>
+					<p class="txt-box-pad-bot-20">Cultivate Charlottesville is a not for profit organization that focuses on building opportunities and unity between youth and the community through cultivating farms. The mission is to create food equity in young people and help them thrive with opportunities to engage in urban farming, discover through experience, build equity, lead, and cultivate healthy living skills.</p>
 					<h3>Created at:</h3>
-					<p>CHarlottesville Design Week Design Marathon</p>
+					<p>Charlottesville Design Week Design Marathon</p>
 				</div>
 				<div class="col-md-6">
 					<h3>Project</h3>
-					<p class="txt-box-pad-bot-20">Winner of Charlottesville Design Marathon 2019. Total rebranding of Cultivate Charlottesville organization, including logo, color palette, style guide, web design, collatorel and merchandise design.  </p>
+					<p class="txt-box-pad-bot-20">Winner of Charlottesville Design Marathon 2019. Total rebranding of Cultivate Charlottesville organization, including logo, color palette, style guide, web design, collateral and merchandise design.</p>
 					<h3>Role</h3>
 					<p class="txt-box-pad-bot-20">UI Web design, UX Design</p>
 					<h3>Credit</h3>
-					<p>Graphic Designer: Lamont Sndridge, John Harman<br/>Project Manager: Bobbi Vernon<br/>Art Director: Avery Wagner</p>
+					<p>Graphic Designer: Lamont Sandridge, John Harman<br/>Project Manager: Bobbi Vernon<br/>Art Director: Avery Wagner</p>
 				</div>
 
 			</div>
@@ -105,7 +105,7 @@
 		<div class="row">
 			<div class="col-sm-6 div-center content-panel">
 				<h1>Thinking</h1>
-				<p>The entier program is all about supporting the community through cultivate and farming. Transfering this on to the digital platforms, we highlighted the colors of the season and earth, and adding soil-like rugged texture throughout the website.</p>
+				<p>The entire program is all about supporting the community through cultivate and farming. Transferring this on to the digital platforms, we highlighted the colors of the season and earth, and adding soil-like rugged texture throughout the website.</p>
 			</div>
 		</div>
 	</div>
