--- a/fancrew_2020.html
+++ b/fancrew_2020.html
@@ -103,7 +103,7 @@
 		<div class="row">
 			<div class="col-sm-6 div-center content-panel">
 				<h1>User Story</h1>
-				<p>Once logged in, the user will be shown list of event in their area by zip code. After the user picks an event they are interested in, they can also view other people who have favorite that event and invite them to attend the event with them. Once invitation has been accepted, both parties have choice to porose seats, and split their payment. After the checkout, the users can use the messaging function to arrange their meet up. </p>
+				<p>Once logged in, the user will be shown list of events in their area by zip code. After the user picks an event they are interested in, they can also view other people who have favorite that event and invite them to attend the event with them. Once invitation has been accepted, both parties have choice to propose seats, and split their payment. After the checkout, the users can use the messaging function to arrange their meet up.</p>
 			</div>
 		</div>
 	</div>
