--- a/about.html
+++ b/about.html
@@ -71,9 +71,9 @@
 				<h3 class="about-subtitle">About Me</h3>
 			</div>
 			<div class="col-md-8">
-				<h3 class="about-h3">UI/Visual designer based in Washington DC area. I currently work for a Cisco, and has experience working with clients various fields such as US Federal government, Healthcare, Education and agriculture, telecommunication and commercial brands.<h3/>
+				<h3 class="about-h3">UI/UX digital product designer based in Washington DC area. I currently work for a Cisco, and has experience working with clients in various fields such as US federal government, healthcare, education and agriculture, telecommunication and commercial brands.<h3/>
 				<h3><br/>
-				I create visual identities, product design web design, user interface and digital graphics based on best practice user exprience methods.</h3>
+				I create visual identities, product design web design, user interface and digital graphics based on best practice user experience methods.</h3>
 				<h3><a href="mailto:kimandy703@gmail.com">Email Me</a></h3>
 			</div>
 		</div>
@@ -98,21 +98,21 @@
 					</div>
 				</div>
 				<div class="skill-wrap">
-					<h3>Branding</h3>
+					<h3>User Experience Design</h3>
 					<div class="skill-bar">
-						<span class="be-skill" data-skill-value="85%" style="background: #2e51dc;width: 85%;"></span>
+						<span class="be-skill" data-skill-value="80%" style="background: #2e51dc;width: 85%;"></span>
 					</div>
 				</div>
 				<div class="skill-wrap">
-					<h3>Graphic Design</h3>
+					<h3>Visual Design</h3>
 					<div class="skill-bar">
-						<span class="be-skill" data-skill-value="85%" style="background: #2e51dc;width: 85%;"></span>
+						<span class="be-skill" data-skill-value="80%" style="background: #2e51dc;width: 85%;"></span>
 					</div>
 				</div>
 				<div class="skill-wrap">
 					<h3>Front-end Development</h3>
 					<div class="skill-bar">
-						<span class="be-skill" data-skill-value="70%" style="background: #2e51dc;width: 70%;"></span>
+						<span class="be-skill" data-skill-value="60%" style="background: #2e51dc;width: 70%;"></span>
 					</div>
 				</div>
 			</div>
@@ -131,7 +131,7 @@
 			<div class="col-md-8">
 				<div class="about-exp">
 					<h3 class="about-h3">Cisco / 2018</h3>
-					<h4>User Experience Designer</h4>
+					<h4>Senior User Experience Designer</h4>
 				</div>
 				<div class="about-exp">
 					<h3 class="about-h3">Reingold / 2015-17</h3>
@@ -153,7 +153,7 @@
 	<div class="container work-stats about-box">
 		<div class="row">
 			<div class="col-md-4">
-				<h3 class="about-subtitle">SNS</h3>
+				<h3 class="about-subtitle">Social Network</h3>
 			</div>
 			<div class="col-md-8">
 				<div class="about-sns linkedin">
