--- a/webex_2020.html
+++ b/webex_2020.html
@@ -78,7 +78,7 @@
 				</div>
 				<div class="col-md-6">
 					<h3>Project</h3>
-					<p class="txt-box-pad-bot-20">Aside from webex.com, the Digital Engagement Team created webes suite website that is brandable with partner colors, logo and typeface. </p>
+					<p class="txt-box-pad-bot-20">Aside from webex.com, the Digital Engagement Team created webex suite website that is brandable with partner colors, logo and typeface. </p>
 					<h3>Role</h3>
 					<p class="txt-box-pad-bot-20">UI/UX Design, Wireframe, Web Design, Front-end Development</p>
 					<h3>Credit</h3>
@@ -105,7 +105,7 @@
 		<div class="row">
 			<div class="col-sm-6 content-panel">
 				<h1>Partner Customization</h1>
-				<p>Branding is important. Engagement Center websites provide cutomization experience for the Partners so they can include their logo, font and their color palette</p>
+				<p>Branding is important. Engagement Center websites provide customization experience for the Partners so they can include their logo, font and their color palette</p>
 			</div>
 			<div class="col-sm-6 content-panel">
 				<h1>Simple and cleaner design</h1>
