--- a/webex_product_site.html
+++ b/webex_product_site.html
@@ -105,7 +105,7 @@
 		<div class="row">
 			<div class="col-sm-6 div-center content-panel">
 				<h1>Partner Customization</h1>
-				<p>Branding is important. Engagement Center websites provide cutomization experience for the Partners so they can include their logo, font and their color palette</p>
+				<p>Branding is important. Engagement Center websites provide customization experience for the Partners so they can include their logo, font and their color palette</p>
 			</div>
 		</div>
 	</div>
