--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 					<a href="webex_product_site.html">
 						<div class="work-thumb">
 							<div class="work-title">
-					          <h3 class="uppercase">Cisc<br>Product website<br/>
+					          <h3 class="uppercase">Cisco<br>Product website<br/>
 					          <span class="work-category">Web Design</span>
 					          </h3>
 					        </div>
@@ -101,7 +101,7 @@
 					<a href="webex_trial.html">
 						<div class="work-thumb">
 						<div class="work-title">
-				        	<h3>Cisco<br>Webex Trial<br/>
+				        	<h3 class="uppercase">Cisco<br>Webex Trial<br/>
 				        	<span class="work-category">UX Design, Web Design</span>
 				        	</h3>
 				        </div>
@@ -118,7 +118,7 @@
 					<a href="cultivate_2020.html">
 						<div class="work-thumb">
 						 <div class="work-title">
-				        	<h3>Cultivate Charlottesville<br>
+				        	<h3 class="uppercase">Cultivate Charlottesville<br>
 				        	<span class="work-category">Branding, UX design, Web Design</span>
 				        	</h3>
 				        </div>
