--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 					<section id="home" class="hero-sec">
 				        <div>
 				          <h2 class="home-title uppercase" id="gradient">ANDY KIM</h2>
-				          <h1>Digital product designer with specialties in responsive Web UI design.</h1>
+				          <h2 style="padding-bottom: 60px;">Digital product designer with specialties in responsive Web UI design.</h1>
 				        	<!-- <img class="main-hero" src="assets/images/andy-hero_2017.png">
 				        	<img class="name_tag" src="assets/images/name_tag2.png"> -->
 				        </div>
