--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
 					<a href="fancrew_2020.html">
 				        <div class="work-thumb">
 				        <div class="work-title">
-				        	<h3>FANCREW<br>
-				        	<span class="work-category">Product Design</span>
+				        	<h3 class="uppercase">FANCREW<br>
+				        	<span class="work-category uppercase">Product Design</span>
 				        	</h3>
 				        </div>
 				        	<img src="assets/images/fancrew_thumb.jpg">
