--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
 			<div class="col-md-8">
 				<h3 class="about-h3">UI/UX digital product designer based in Washington DC area. I currently work for a Cisco, and has experience working with clients in various fields such as US federal government, healthcare, education and agriculture, telecommunication and commercial brands.<h3/>
 				<h3><br/>
-				I create visual identities, product design web design, user interface and digital graphics based on best practice user experience methods.</h3>
+				I create visual identities through product design, web design, user interface and digital graphics based on best practiced user experience methods.</h3>
 				<h3><a href="mailto:kimandy703@gmail.com">Email Me</a></h3>
 			</div>
 		</div>
