--- a/fancrew_2020.html
+++ b/fancrew_2020.html
@@ -78,7 +78,7 @@
 				</div>
 				<div class="col-md-6">
 					<h3>Project</h3>
-					<p class="txt-box-pad-bot-20">As a sports fan, I had trouble finding friends to go to a sporting event together. I wanted to create a sort of Tinder for sports and music fans, who can connect, split payment, meet up and enjoy the event together. </p>
+					<p class="txt-box-pad-bot-20">As a sports fan, I had trouble finding friends to go to a sporting event together. I wanted to create a sort of 'Tinder for sports and music fans', that can connect, split payment, meet up and enjoy the event together. </p>
 					<h3>Role</h3>
 					<p class="txt-box-pad-bot-20">Branding, UI/UX Design, Mobile App Design</p>
 				</div>
