--- a/webex_product_site.html
+++ b/webex_product_site.html
@@ -78,7 +78,7 @@
 				</div>
 				<div class="col-md-6">
 					<h3>Project</h3>
-					<p class="txt-box-pad-bot-20">As one of the main services provided for the partners, DEC team needed a customizable product website design template that could accommodate partner’s own style guidelines.</p>
+					<p class="txt-box-pad-bot-20">As one of the main services provided for the partners, DEC team needed a customizable product website template, that can accommodate partner’s own style guidelines.</p>
 					<h3>Role</h3>
 					<p class="txt-box-pad-bot-20">UI/UX Design, Wireframe, Web Design, Front-end Development</p>
 					<h3>Credit</h3>
@@ -105,7 +105,7 @@
 		<div class="row">
 			<div class="col-sm-6 div-center content-panel">
 				<h1>Partner Customization</h1>
-				<p>Branding is important. Engagement Center websites provide customization experience for the Partners so they can include their logo, font and their color palette</p>
+				<p>Branding is important. Engagement Center websites provide customization experience for the Partners so they can include their logo, font and color palette.</p>
 			</div>
 		</div>
 	</div>
