--- a/webex_trial.html
+++ b/webex_trial.html
@@ -72,13 +72,13 @@
 			<div class="row product_site">
 				<div class="col-md-6">
 					<h3>Brief</h3>
-					<p class="txt-box-pad-bot-20">Not all of Cisco partners wants to use the custom webex website. Some of them wants to keep it in their own site, and for them, we have created a trial process for these partners. They can simply add a button on their site, which will lead the user to free 30-day Webex Trial sign up process. </p>
+					<p class="txt-box-pad-bot-20">Not all of Cisco partners want to use the custom webex website. Some of them wants to keep it in their own website. For these partners, we have created a trial process for drive users to sign up for free Webex trial. The partners can simply add a button on their website, which will lead the user to free 30-day Webex Trial sign up process. </p>
 					<h3>Created at:</h3>
 					<p>Cisco Systems Collaboration Technology Group:</p>
 				</div>
 				<div class="col-md-6">
 					<h3>Project</h3>
-					<p class="txt-box-pad-bot-20">This brandable trial process is to provide 30-day free Webex Trial experience for businesses who visit Cisco and Cisco partners. The user experience was kept to minimal steps, with option of adding additional team members, and try-out devices.</p>
+					<p class="txt-box-pad-bot-20">This brandable trial process is to provide 30-day free Webex Trial experience for businesses who visit Cisco Webex digital website and Cisco partners website. The user experience was kept to minimal steps, with option of adding additional team members, and try-out devices.</p>
 					<h3>Role</h3>
 					<p class="txt-box-pad-bot-20">UI/UX Design, Web Design</p>
 					<h3>Credit</h3>
@@ -105,7 +105,7 @@
 		<div class="row">
 			<div class="col-sm-6 content-panel">
 				<h1>Partner Customization</h1>
-				<p>Branding is important. Engagement Center websites provide customization experience for the Partners so they can include their logo, font and their color palette</p>
+				<p>Branding is important. The Trial process design provide customization experience for the partners so they can include their logo, font and color palette.</p>
 			</div>
 			
 		</div>
