--- a/about.html
+++ b/about.html
@@ -135,7 +135,7 @@
 				</div>
 				<div class="about-exp">
 					<h3 class="about-h3">Reingold / 2015-17</h3>
-					<h4>User Interface Designer</h4>
+					<h4>Visual Designer</h4>
 				</div>
 				<div class="about-exp">
 					<h3 class="about-h3">Munhwa Broadcasting Corp. / 2012-14</h3>
