--- a/cultivate_2020.html
+++ b/cultivate_2020.html
@@ -72,7 +72,7 @@
 			<div class="row">
 				<div class="col-md-6">
 					<h3>Brief</h3>
-					<p class="txt-box-pad-bot-20">Cultivate Charlottesville is a not for profit organization that focuses on building opportunities and unity between youth and the community through cultivating farms. The mission is to create food equity in young people and help them thrive with opportunities to engage in urban farming, discover through experience, build equity, lead, and cultivate healthy living skills.</p>
+					<p class="txt-box-pad-bot-20">Cultivate Charlottesville is a not-for-profit organization that focuses on building opportunities and unity between youth and the community through cultivating farms. The mission is to create food equity in young people and help them thrive with opportunities to engage in urban farming, discover through experience, build equity, lead, and cultivate healthy living skills.</p>
 					<h3>Created at:</h3>
 					<p>Charlottesville Design Week Design Marathon</p>
 				</div>
