--- a/webex_2020.html
+++ b/webex_2020.html
@@ -72,7 +72,7 @@
 			<div class="row product_site">
 				<div class="col-md-6">
 					<h3>Brief</h3>
-					<p class="txt-box-pad-bot-20">Cisco Collaboration Technology Group's main focus is to help the partners with their sales of Webex collaboration products. The newly designed website will be easier to navigate, read, focus on main features that the customers are looking to solve by using Webex. </p>
+					<p class="txt-box-pad-bot-20">Cisco Collaboration Technology Group's main focus is to help the partners with their sales of Webex collaboration products. The newly designed website will be easier to navigate, read, focused on presenting main features that the customers are looking to solve by using Webex. </p>
 					<h3>Created at:</h3>
 					<p>Cisco Systems Collaboration Technology Group:</p>
 				</div>
@@ -105,7 +105,7 @@
 		<div class="row">
 			<div class="col-sm-6 content-panel">
 				<h1>Partner Customization</h1>
-				<p>Branding is important. Engagement Center websites provide customization experience for the Partners so they can include their logo, font and their color palette</p>
+				<p>Branding is important. Engagement Center websites provide customization experience for the Partners so they can include their logo, font and color palette.</p>
 			</div>
 			<div class="col-sm-6 content-panel">
 				<h1>Simple and cleaner design</h1>
