--- a/webex_2020.html
+++ b/webex_2020.html
@@ -72,7 +72,13 @@
 			<div class="row product_site">
 				<div class="col-md-6">
 					<h3>Brief</h3>
-					<p class="txt-box-pad-bot-20">Cisco Collaboration Technology Group's main focus is to help the partners with their sales of Webex collaboration products. The newly designed website will be easier to navigate, read, focused on presenting main features that the customers are looking to solve by using Webex. </p>
+					<p class="txt-box-pad-bot-20">Cisco Collaboration Technology Group's main focus is to help the partners with their sales of Webex product. The newly designed website will be easier to navigate and focus on presenting main features that the customers are looking to solve by using Webex. 
+					<!-- For the partners, the website will help with;
+					<li>Enable partners to launch their digital presence for Webex Product website</li>
+					<li>Support end-to-end journey of end user finding, learning, trying, and buying Webex</li>
+					<li>Handle both direct traffic and campign traffic</li>
+					<li>Partner brand-able, customizable, with content syndication from Cisco</li> -->
+					</p>
 					<h3>Created at:</h3>
 					<p>Cisco Systems Collaboration Technology Group:</p>
 				</div>
@@ -104,12 +110,54 @@
 	<div class="container container-tiny">
 		<div class="row">
 			<div class="col-sm-6 content-panel">
-				<h1>Partner Customization</h1>
-				<p>Branding is important. Engagement Center websites provide customization experience for the Partners so they can include their logo, font and color palette.</p>
+				<h1>Purpose</h1>
+				<p>Referencing and using the existing Webex.com as the back bone, we narrowed down, chopped out and added necessary information needed for our target audience. We came up with a revised site-map with a new information architecture to fulfill the target needs. From the new site-map, we added and re-arranged the content on a newly revised wireframe for best User Experience and flow.</p>
+				<p>The website will help with;
+					<li>Enable partners to launch their digital presence for Webex Product website</li>
+					<li>Support end-to-end journey of end user finding, learning, trying, and buying Webex</li>
+					<li>Handle both direct traffic and campign traffic</li>
+					<li>Partner brand-able, customizable, with content syndication from Cisco</li> 
+				</p>
 			</div>
 			<div class="col-sm-6 content-panel">
+				<h1>Target Audience</h1>
+				<ul>
+					<li>Prospective buyers and users</li>
+					<li>Decision makers/IT buyers and business buyers</li>
+					<li>Small/Medium/Large segments depending on partner focus</li>
+				</ul>
+				<ul>
+					<li>Chief Security Officers: Security and encryption on communications and systems</li>
+					<li>Chief Information Officers: Migrate to the cloud, upgrade phone systems, building call center and integrate with existing business applications</li>
+					<li>Managers: Connecting remote teams/team members</li>
+					<li>Small business owners: New/remote offices, connecting teams, lowering cost</li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-sm-12 work-stats">
+				<img class="img-center" src="assets/images/product_site/webex.com/webex_sitemap.jpg">
+			</div>
+		</div>
+	</div>
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-sm-12 work-stats">
+				<img class="img-center" src="assets/images/product_site/webex.com/webex_wireframe.jpg">
+			</div>
+		</div>
+	</div>
+	<div class="container container-tiny">
+		<div class="row">
+			<div class="col-sm-6 content-panel">
 				<h1>Simple and cleaner design</h1>
-				<p>Less is more. By focusing on one color from the palette, it makes it easier for the users to follow through the story and the cleaner overall look is more engaging to the readers. </p>
+				<p>Final design was focused on clean and flat design, that will be easy to read through, and where no information on the page goes mission. By focusing on one color from the palette, it makes it easier for the users to follow through the story and the cleaner overall look is more engaging to the readers. </p>
+			</div>
+			<div class="col-sm-6 content-panel">
+				<h1>Partner Customization</h1>
+				<p>Branding is important. Engagement Center websites provide customization experience for the Partners so they can include their logo, font and color palette.</p>
 			</div>
 		</div>
 	</div>
@@ -120,13 +168,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="container-fluid">
-		<div class="row">
-			<div class="col-sm-12 work-stats">
-				<img class="img-center" src="assets/images/product_site/webex.com/webex_animation.gif">
-			</div>
-		</div>
-	</div>
+	
 	<div class="container container-tiny">
 		<div class="row">
 			<div class="col-sm-6 div-center content-panel">
