--- a/index.html
+++ b/index.html
@@ -98,14 +98,14 @@
 			        </a>
 				</div>
 				<div class="col-md-4">
-					<a href="cultivate_2020.html">
+					<a href="salespbook_2020.html">
 						<div class="work-thumb">
 						 <div class="work-title">
-				        	<h3 class="uppercase">Cultivate Charlottesville<br>
-				        	<span class="work-category">Branding, UX design, Web Design</span>
+				        	<h3 class="uppercase">Sales Playbook<br>
+				        	<span class="work-category">UX design, Web Design</span>
 				        	</h3>
 				        </div>
-				        	<img src="assets/images/cultivate_thumb.jpg">
+				        	<img src="assets/images/salespbook_thumb.jpg">
 				        </div>
 				    </a>
 				</div>
@@ -126,6 +126,18 @@
 
 		<div class="container last">
 			<div class="row">
+				<div class="col-md-4">
+					<a href="cultivate_2020.html">
+						<div class="work-thumb">
+						 <div class="work-title">
+				        	<h3 class="uppercase">Cultivate Charlottesville<br>
+				        	<span class="work-category">Branding, UX design, Web Design</span>
+				        	</h3>
+				        </div>
+				        	<img src="assets/images/cultivate_thumb.jpg">
+				        </div>
+				    </a>
+				</div>
 				<div class="col-md-4">
 					<a href="adbi.html">
 						<div class="work-thumb">
@@ -150,6 +162,10 @@
 				        </div>
 				    </a>
 				</div>
+			</div>
+		</div>
+				<div class="container last">
+			<div class="row">
 				<div class="col-md-4">
 					<a href="https://dribbble.com/kimandy703" target="_blank">
 						<div class="work-thumb">
