--- a/fancrew_2020.html
+++ b/fancrew_2020.html
@@ -101,6 +101,25 @@
 	</div>
 	<div class="container container-tiny">
 		<div class="row">
+			<div class="col-sm-6 content-panel">
+				<h1>User Interview</h1>
+				<p class="txt-box-pad-bot-20">After the initial idea, I interviewed 25 people from work and my church group. 15 of them were male in their 20s, 5 were male in their 30s and 5 were female in their 20s. 10 of them came from a different city because of their jobs, and 5 of them travel more than 25% of the year for work. All of them were interested in attending sports events in the next 6 months, and all of them were willing to pay more than $100 if their favorite artists were to come to town. 21 of them were open to meeting new people by going to sports games or musical concerts.</p>
+			</div>
+			<div class="col-sm-6 content-panel">
+				<h1>User Persona</h1>
+				<p class="txt-box-pad-bot-20">Based on the interview, I have created 3 different types of personas. One for someone who is new to town and willing to explore, one for someone who travels and wants to explore whenever they are out of town, and one for who is struggling to find people with the same interest.</p>
+			</div>
+		</div>
+	</div>
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-sm-12 work-stats">
+				<img class="img-center" src="assets/images/fancrew/Fancrew_persona.jpg">
+			</div>
+		</div>
+	</div>
+		<div class="container container-tiny">
+		<div class="row">
 			<div class="col-sm-6 div-center content-panel">
 				<h1>User Story</h1>
 				<p>Once logged in, the user will be shown list of events in their area by zip code. After the user picks an event they are interested in, they can also view other people who have favorite that event and invite them to attend the event with them. Once invitation has been accepted, both parties have choice to propose seats, and split their payment. After the checkout, the users can use the messaging function to arrange their meet up.</p>
