--- a/index.html
+++ b/index.html
@@ -73,6 +73,18 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-4">
+					<a href="salespbook_2020.html">
+						<div class="work-thumb">
+						 <div class="work-title">
+				        	<h3 class="uppercase">Webex Calling<br/>Control Hub<br>
+				        	<span class="work-category">UX design, Portal Design</span>
+				        	</h3>
+				        </div>
+				        	<img src="assets/images/ch_thumb.jpg">
+				        </div>
+				    </a>
+				</div>
+				<div class="col-md-4">
 					<a href="webex_2020.html">
 						<div class="work-thumb">
 							<div class="work-title">
@@ -97,18 +109,7 @@
 				        </div>
 			        </a>
 				</div>
-				<div class="col-md-4">
-					<a href="salespbook_2020.html">
-						<div class="work-thumb">
-						 <div class="work-title">
-				        	<h3 class="uppercase">Sales Playbook<br>
-				        	<span class="work-category">UX design, Web Design</span>
-				        	</h3>
-				        </div>
-				        	<img src="assets/images/salespbook_thumb.jpg">
-				        </div>
-				    </a>
-				</div>
+				
 				<!-- <div class="col-md-4">
 					<a href="webex_trial.html">
 						<div class="work-thumb">
