--- a/ch_2020.html
+++ b/ch_2020.html
@@ -201,13 +201,13 @@
 		</div>
 	</div>
 	
-	<div class="container-fluid">
+<!-- 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-sm-12 work-stats">
 				<img class="img-center" src="assets/images/product_site/ch/ch_2.0.jpg">
 			</div>
 		</div>
-	</div>
+	</div> -->
 
 <!-- Scroll to top -->
 	<div class="scroll-up">
