--- a/index.html
+++ b/index.html
@@ -73,6 +73,18 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-4">
+					<a href="webex_FTSW.html">
+						<div class="work-thumb">
+							<div class="work-title">
+					          <h3 class="uppercase">Webex<br>Setup Wizard<br/>
+					          <span class="work-category">UI/UX Design</span>
+					          </h3>
+					        </div>
+				        	<img src="assets/images/FTSW_thumb.jpg">
+				        </div>
+			        </a>
+				</div>
+				<div class="col-md-4">
 					<a href="ch_2020.html">
 						<div class="work-thumb">
 						 <div class="work-title">
@@ -93,19 +105,6 @@
 					          </h3>
 					        </div>
 				        	<img src="assets/images/webexdigital_thumb.jpg">
-				        </div>
-			        </a>
-				</div>
-				
-				<div class="col-md-4">
-					<a href="webex_product_site.html">
-						<div class="work-thumb">
-							<div class="work-title">
-					          <h3 class="uppercase">Cisco<br>Product website<br/>
-					          <span class="work-category">Web Design</span>
-					          </h3>
-					        </div>
-				        	<img src="assets/images/productsite_thumb.jpg">
 				        </div>
 			        </a>
 				</div>
