--- a/about.html
+++ b/about.html
@@ -125,7 +125,7 @@
 			<div class="col-md-4">
 				<h3 class="about-subtitle">About Me</h3>
 				<h3 class="about-subtitle-sm">
-				  <a href="assets/ak_resume_2019.pdf">Download Resume</a>
+				  <a href="assets/ak_Resume_21.pdf">Download Resume</a>
 				</h3>
 			</div>
 			<div class="col-md-8">
