--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-4">
-					<a href="webex_FTSW.html">
+					<a href="momentum_designsystem.html">
 						<div class="work-thumb">
 							<div class="work-title">
-					          <h3 class="uppercase">Webex<br>Setup Wizard<br/>
-					          <span class="work-category">UI/UX Design</span>
+					          <h3 class="uppercase">Webex<br>Momentum Design System<br/>
+					          <span class="work-category"></span>
 					          </h3>
 					        </div>
-				        	<img src="assets/images/FTSW_thumb.jpg">
+				        	<img src="assets/images/momentum_thumb.jpg">
 				        </div>
 			        </a>
 				</div>
