--- a/about.html
+++ b/about.html
@@ -86,13 +86,13 @@
 			</div>
 			<div class="col-md-8">
 				<div class="skill-wrap">
-					<h3>User Interface/Web Design</h3>
+					<h3>User Interface/Design System</h3>
 					<div class="skill-bar">
 						<span class="be-skill" data-skill-value="94%" style="background: #2e51dc;width: 94%;"></span>
 					</div>
 				</div>
 				<div class="skill-wrap">
-					<h3>Visual Design</h3>
+					<h3>Visual/Web Design</h3>
 					<div class="skill-bar">
 						<span class="be-skill" data-skill-value="90%" style="background: #2e51dc;width: 90%;"></span>
 					</div>
@@ -125,7 +125,7 @@
 			<div class="col-md-4">
 				<h3 class="about-subtitle">About Me</h3>
 				<h3 class="about-subtitle-sm">
-				  <a href="assets/ak_Resume_21.pdf">Download Resume</a>
+				  <a href="assets/ak_resume_2024.pdf" target="_blank">Download Resume</a>
 				</h3>
 			</div>
 			<div class="col-md-8">
