--- a/index.html
+++ b/index.html
@@ -85,14 +85,14 @@
 			        </a>
 				</div>
 				<div class="col-md-4">
-					<a href="ch_2020.html">
+					<a href="doc_site.html">
 						<div class="work-thumb">
 						 <div class="work-title">
-				        	<h3 class="uppercase">Webex Calling<br/>Control Hub<br>
-				        	<span class="work-category">UX design, Portal Design</span>
+				        	<h3 class="uppercase">Momentum <br/>Design System<br/>Website<br>
+				        	<span class="work-category">Design & Manage</span>
 				        	</h3>
 				        </div>
-				        	<img src="assets/images/ch_thumb.jpg">
+				        	<img src="assets/images/web_thumb.jpg">
 				        </div>
 				    </a>
 				</div>
@@ -108,7 +108,18 @@
 				        </div>
 			        </a>
 				</div>
-				
+				<div class="col-md-4">
+					<a href="webex_2020.html">
+						<div class="work-thumb">
+							<div class="work-title">
+					          <h3 class="uppercase">Cisco<br/>Webex Digital<br/>
+					          <span class="work-category">Web Design</span>
+					          </h3>
+					        </div>
+				        	<img src="assets/images/webexdigital_thumb.jpg">
+				        </div>
+			        </a>
+				</div>
 				<!-- <div class="col-md-4">
 					<a href="webex_trial.html">
 						<div class="work-thumb">
@@ -124,7 +135,7 @@
 			</div>
 		</div>
 
-		<div class="container last">
+		<!-- <div class="container last">
 			<div class="row">
 				<div class="col-md-4">
 					<a href="cultivate_2020.html">
@@ -163,8 +174,8 @@
 				    </a>
 				</div>
 			</div>
-		</div>
-				<div class="container last">
+		</div> -->
+		<!-- <div class="container last">
 			<div class="row">
 				<div class="col-md-4">
 					<a href="https://dribbble.com/kimandy703" target="_blank">
@@ -179,14 +190,14 @@
 			        </a>
 				</div>
 			</div>
-		</div>
+		</div> -->
 		<div class="container last">
 			<div class="row">
 				<div>
 					<div class="col-md-4"></div>
 					<div class="col-md-4">
 						<div class="icon-center">
-							<a class="icon-pad" href="assets/ak_Resume_21.pdf" target="_blank">
+							<a class="icon-pad" href="assets/ak_resume_2024.pdf" target="_blank">
 								<svg class="icon-size">
 							    	<use xlink:href="#resume"/>
 							  	</svg>
